# SwiftMTMessage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ERRORHANDLING.md  README.md  code_duplication_proposal.md  codebase_analysis_report.md  issues.md  proposal.md  scenario_tracker.md  testing-plan.md
.github/workflows/: crate-publish.yml
backward-compatibility-test/: .gitignore  Cargo.toml  README.md  run_compatibility_test.sh
backward-compatibility-test/src/: compare_compatibility.rs  generate_json.rs  generate_new_json.rs  generate_old_json.rs
config/: README.md  field_validations.json  mandatory_fields.json  mt103_stp_validation_rules.json  mt103_validation_rules.json  swift_format_rules.json
examples/: basic_parsing.rs  benchmark.rs  cbpr_plus_demo.rs  comprehensive_demo.rs  error_collection.rs  generate_manifest.rs  json_config_sample_generation.rs  json_to_mt_example.rs  mt103_example.rs  mt103_stp_example.rs  parse_auto.rs  parse_mt103.rs  parse_mt202.rs  sample_generation.rs  sample_generation_custom.rs  simple_sample_test.rs
scenarios/: MXMessage  SwiftMTMessage
scripts/: publish_release.sh
src/: common.rs  config.rs  error.rs  errors.rs  field_parser.rs  json.rs  lib.rs  parsed_message.rs  parser.rs  swift_error_codes.rs  swift_message.rs  tokenizer.rs  traits.rs  utils.rs  validation.rs  validator.rs
src/field_parser/: mod.rs
src/fields/: field11.rs  field12.rs  field13.rs  field19.rs  field20.rs  field21.rs  field23.rs  field25.rs  field26.rs  field28.rs  field30.rs  field32.rs  field33.rs  field34.rs  field36.rs  field37.rs  field50.rs  field51.rs  field52.rs  field53.rs  field54.rs  field55.rs  field56.rs  field57.rs  field58.rs  field59.rs  field60.rs  field61.rs  field62.rs  field64.rs  field65.rs  field70.rs  field71.rs  field72.rs  field75.rs  field76.rs  field77.rs  field79.rs  field86.rs  field90.rs  (+2 more)
src/headers/: mod.rs
status/: MT192_MT292.md  MT196_MT296.md  MT202-COV.md  mt101.md  mt102.md  mt103-stp.md  mt103.md  mt104.md  mt107.md  mt110.md  mt111.md  mt112.md  mt202-complete.md  mt202.md  mt203_mt204.md  mt205-complete.md  mt210.md  mt900.md  mt910.md  mt920.md  mt935.md  mt940.md  mt941.md  mt942.md  mt950.md  mtn99.md
swift-mt-message/: Cargo.toml  status.md
swift-mt-message-macros/: Cargo.toml  IMPLEMENTATION_GUIDE.md  plan.md
swift-mt-message-macros/src/: error.rs  format.rs  format_validation.rs  lib.rs  sample_generation.rs  serde.rs  slash_handler_utils.rs
swift-mt-message-macros/src/ast/: field.rs  message.rs  mod.rs
swift-mt-message-macros/src/business/: logic.rs  mod.rs
swift-mt-message-macros/src/codegen/: field.rs  helpers.rs  message.rs  mod.rs  pattern_generators.rs  serde.rs  type_generators.rs  validation.rs
swift-mt-message-macros/src/component/: mod.rs  parser.rs  registry.rs
swift-mt-message-macros/src/derive/: field.rs  message.rs  mod.rs
swift-mt-message-macros/src/format/: mod.rs  spec_parser.rs
swift-mt-message-macros/src/utils/: attributes.rs  mod.rs  sample.rs  serde_attributes.rs  types.rs
swift-mt-message/examples/: mt900_example.rs
swift-mt-message/src/: account_field.rs  bic_field.rs  currency_field.rs  errors.rs  lib.rs  multiline_field.rs  name_field.rs  parsed_message.rs  parser.rs  parsing_utils.rs  party_field.rs  sample.rs  scenario_config.rs  serde_helpers.rs  shared_validation.rs  slash_handler.rs  slash_handler_impl.rs  swift_error_codes.rs  swift_message.rs  traits.rs  utils.rs  validation.rs  validation_result.rs  validation_rules.rs
swift-mt-message/src/fields/: field11.rs  field11s.rs  field12.rs  field13.rs  field13c.rs  field13d.rs  field19.rs  field20.rs  field21.rs  field23.rs  field23b.rs  field23e.rs  field25.rs  field26.rs  field26t.rs  field28.rs  field28c.rs  field28d.rs  field30.rs  field32.rs  field32a.rs  field33.rs  field33b.rs  field34.rs  field34f.rs  field36.rs  field37.rs  field37h.rs  field50.rs  field51.rs  field51a.rs  field52.rs  field52a.rs  field52d.rs  field53.rs  field53a.rs  field53b.rs  field53d.rs  field54.rs  field54a.rs  (+47 more)
swift-mt-message/src/fields/common/: account_field.rs  balance_field.rs  bic_field.rs  currency_field.rs  mod.rs  multiline_field.rs  multiline_text_field.rs  name_field.rs  party_field.rs  reference_field.rs  summary_field.rs  text_field.rs
swift-mt-message/src/headers/: mod.rs
swift-mt-message/src/message_parser/: field_extractor.rs  mod.rs
swift-mt-message/src/messages/: mod.rs  mt101.rs  mt103.rs  mt103_remit.rs  mt103_stp.rs  mt104.rs  mt107.rs  mt110.rs  mt111.rs  mt112.rs  mt190.rs  mt191.rs  mt192.rs  mt196.rs  mt199.rs  mt200.rs  mt202.rs  mt202_cov.rs  mt204.rs  mt205.rs  mt210.rs  mt290.rs  mt291.rs  mt292.rs  mt296.rs  mt299.rs  mt900.rs  mt910.rs  mt920.rs  mt935.rs  mt940.rs  mt941.rs  mt942.rs  mt950.rs
swift-mt-message/src/messages_old/: mod.rs  mt104.rs  mt110.rs  mt111.rs  mt190.rs  mt192.rs  mt199.rs  mt202.rs  mt290.rs  mt900.rs  mt935.rs  mt942.rs  mt950.rs  test_macros.rs
swift-mt-message/src/parser/: README.md  generated.rs  mod.rs  parser_impl.rs  sequence_parser.rs  swift_parser.rs  utils.rs
swift-mt-message/src/plugin/: generate.rs  mod.rs  parse.rs  publish.rs  validate.rs
swift-mt-message/tests/: end2end.rs  mt202_test.rs  round_trip_test.rs  test_cov_mismatch_simple.rs
test_data/: mt101_complete.txt  mt101_test.txt  mt103_norm.txt  mt103_norm_2.txt  mt103_rejt.txt  mt103_retn.txt  mt103_stp.txt  mt104.norm2.txt  mt104_norm.txt  mt107_norm.txt  mt110_norm1.txt  mt110_norm2.txt  mt111_norm.txt  mt112_norm.txt  mt192_norm.txt  mt196_norm.txt  mt202_core.txt  mt202_cov.txt  mt202_minimal.txt  mt202_rejt.txt  mt202_retn.txt  mt202_serial.txt  mt205_core.txt  mt205_cover.txt  mt205_rejt.txt  mt205_retn.txt  mt205_serial.txt  mt210_test.txt  mt292_test.txt  mt296_full.txt  mt296_test.txt  mt299_minimal.txt  mt299_reject.txt  mt299_test.txt  mt900_minimal.txt  mt900_test.txt  mt900_with_time.txt  mt910_institution.txt  mt910_test.txt  mt920_942.txt  (+17 more)
test_scenarios/: README.md  cbpr_implementation_roadmap.md  cbpr_scenarios.md  coverage.md  json_semi_beautifier.py
tests/: end2end.rs
(+317 files in other folders)
