[workspace]
members = ["swift-mt-message", "swift-mt-message-macros"]
resolver = "2"

[workspace.dependencies]
# Core serialization and parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Error handling and utilities
thiserror = "1.0"
regex = "1.11"
once_cell = "1.21"

# Derive macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Data validation
datalogic-rs = "3.0"
