[workspace]
members = ["swift-mt-message", "swift-mt-message-macros"]
resolver = "2"

[workspace.dependencies]
# Core serialization and parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling and utilities
thiserror = "1.0"
regex = "1.11"
once_cell = "1.21"

# Derive macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Data validation and workflow
datalogic-rs = "4.0"
dataflow-rs = "2.0"

# Plugin support
async-trait = "0.1"
tracing = "0.1"
rand = "0.8"

# Datafake for sample generation
datafake-rs = { version = "0.2", path = "../datafake-rs" }
