[package]
name = "swift-mt-message"
version = "3.1.4"
edition = "2024"
exclude = [".DS_Store", "/target", ".vscode", ".github"]
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of SWIFT MT message parsing with comprehensive field support, derive macros, and validation."
readme = "README.md"
homepage = "https://github.com/GoPlasmatic/SwiftMTMessage"
repository = "https://github.com/GoPlasmatic/SwiftMTMessage"
keywords = ["swift", "mt", "message", "parsing", "macro"]
categories = ["data-structures", "development-tools", "parsing"]

[features]
default = []
jsonschema = ["dep:schemars"]

[dependencies]
# JSON Schema generation (optional)
schemars = { version = "0.8", optional = true }
# Core serialization and parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling and utilities
thiserror = "1.0"
regex = "1.12"
once_cell = "1.21"

# Data validation and workflow
datalogic-rs = "4.0"
dataflow-rs = "2.0"

# Plugin support
async-trait = "0.1"
tracing = "0.1"
rand = "0.8"

# Datafake for sample generation
datafake-rs = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.23"
tokio = { version = "1.48", features = ["rt", "macros", "test-util"] }
schemars = "0.8"

[[example]]
name = "generate_manifest"
required-features = ["jsonschema"]
