[package]
name = "backward-compatibility-test"
version = "0.1.0"
edition = "2021"

# Make this project independent from the parent workspace
[workspace]

[[bin]]
name = "generate_old_json"
path = "src/generate_old_json.rs"

[[bin]]
name = "generate_new_json"
path = "src/generate_new_json.rs"

[[bin]]
name = "compare_compatibility"
path = "src/compare_compatibility.rs"

[dependencies]
# Default to previous version from crates.io
swift-mt-message = { version = "2.0.15", optional = true }
# Local development version
swift-mt-message-local = { package = "swift-mt-message", path = "../swift-mt-message", optional = true }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
walkdir = "2.0"

[features]
default = ["published"]
published = ["swift-mt-message"]
local = ["swift-mt-message-local"] 