[package]
name = "swift-mt-message"
version = "3.0.0"
edition = "2021"
exclude = [".DS_Store", "/target", ".vscode", ".github"]
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of SWIFT MT message parsing with comprehensive field support, derive macros, and validation."
readme = "../README.md"
homepage = "https://github.com/GoPlasmatic/SwiftMTMessage"
repository = "https://github.com/GoPlasmatic/SwiftMTMessage"
keywords = ["swift", "mt", "message", "parsing", "macro"]
categories = ["data-structures", "development-tools", "parsing"]

[dependencies]
# Macro crate
swift-mt-message-macros = { version = "3.0", path = "../swift-mt-message-macros" }

datafake-rs = { version = "0.1", path = "../../datafake-rs" }

# Core serialization and parsing
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling and utilities
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Data validation
datalogic-rs = { workspace = true }

# Random number generation for sample data
rand = { workspace = true }

# UUID generation for realistic UETR
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"

[[example]]
name = "parse_auto"
path = "../examples/parse_auto.rs"

[[example]]
name = "benchmark"
path = "../examples/benchmark.rs"

[[example]]
name = "error_collection"
path = "../examples/error_collection.rs"

[[example]]
name = "sample_generation_custom"
path = "../examples/sample_generation_custom.rs"


