[package]
name = "swift-mt-message"
version = "3.1.0"
edition = "2024"
exclude = [".DS_Store", "/target", ".vscode", ".github"]
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of SWIFT MT message parsing with comprehensive field support, derive macros, and validation."
readme = "../README.md"
homepage = "https://github.com/GoPlasmatic/SwiftMTMessage"
repository = "https://github.com/GoPlasmatic/SwiftMTMessage"
keywords = ["swift", "mt", "message", "parsing", "macro"]
categories = ["data-structures", "development-tools", "parsing"]

[dependencies]
# Core serialization and parsing
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
chrono = { workspace = true }

# Error handling and utilities
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Data validation and workflow
datalogic-rs = { workspace = true }
dataflow-rs = { workspace = true }

# Plugin support
async-trait = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

# Datafake for sample generation
datafake-rs = { workspace = true }

[features]
default = []

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.22"
tokio = { version = "1.35", features = ["rt", "macros", "test-util"] }
